force-app/main/default/objects/Interaction_Participant__c/Interaction_Participant__c.object-meta.xml
<CustomObject>
    <label>Interaction Participant</label>
    <nameField>
        <label>Interaction Participant Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Interaction Participants</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>