force-app/main/default/objects/Interaction_Participant__c/fields/ParticipantId__c.field-meta.xml
<CustomField>
    <fullName>ParticipantId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Participant</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Interaction_Participants</relationshipName>
    <type>Lookup</type>
</CustomField>